# AnyCXR

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  seg.py  setup.py
cxas/: augmentation.py  checkpoints.py  dataset.py  segmentor.py
cxas/data/: anychest_reference.json
cxas/extraction/: cardiothoracic_ratio.py  ctr_analysis.py  func_helpers.py  spinecenter_distance.py
cxas/losses/: compound_losses.py
cxas/models/UNet/: attention_modules.py  backbone_adapters.py  decoder.py  encoder.py  jtr_modules.py  unet_blocks.py  unet_model.py
examples/: README.md  example_cases.json
scripts/: build_example_cases.sh  evaluate_test_case.py  reproduce_main_eval.sh
